--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.20",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
+    "d3-force": "^3.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "lucide-react": "^0.454.0",
