--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "serve": "nodemon ./src/server/server.js"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.59.20",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-force-graph-2d": "^1.25.7",
+    "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
