--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
     "react-force-graph-2d": "^1.25.7",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.6",
     "tailwind-merge": "^2.5.4",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/d3-force": "^3.0.10",
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
