--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "lucide-react": "^0.454.0",
+    "memoize-one": "^6.0.0",
     "neo4j-driver": "^5.26.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
